--- a/styles.css
+++ b/styles.css
@@ -494,17 +494,35 @@ to {
 
 /* ----------- NOSOTROS ----------- */
 
-.nosotrosContainer {
+.drinkContainer {
     position: absolute;
     width: 80vw;
     height: 70vh;
     left: 4%;
     top: 10%;
-    background: #D9D9D9;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url(./imagenes/drinkBackground.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(2px);
+}
+
+.textContainer {
+    position: absolute;
+    width: 80vw;
+    height: 70vh;
+    left: 4%;
+    top: 10%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #D9D9D9;
+    filter: opacity(70%);
 }
 
 
