--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,19 @@ to {
     left: 42%; 
     
     z-index: 0;
+    animation: entryreflect 2s ease 1 normal forwards;
+    animation-delay: 2s;
+    opacity: 0;
+}
+
+@keyframes entryreflect {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 
 .description__paragraph{
