--- a/styles.css
+++ b/styles.css
@@ -436,72 +436,35 @@ to {
     background: #D9D9D9;
     border-radius: 20px;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-.half {
+.derecha {
+    background: url("imagenes/Charles_antoine.jpg") no-repeat center;
+    background-size: cover;
+    height: 100%;
+    width: 50%;
+    border-radius: 0px 20px 20px 0px;
+    
+}
+
+.izquierda {
     display: flex;
-    justify-content: space-between;
-    width: 70%;
-
+    flex-direction: column;
+    align-items: center;
+    width: 51.2%;
+    height: 100%;
 }
 
-.secondHalf {
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
-}
-
-.contactoContainer .half .item {
-    width: 48%;
-    margin-bottom: 30px;
-}
-
-.contactoContainer .half .item input {
-    border-radius: 4px;
-    border: 1px solid white;
-    outline: 0;
-    padding: 16px;
-    width: 90%;
-}
-
-.contactoContainer .secondHalf .item {
-    width: 48%;
-    margin-bottom: 30px;
-}
-
-.contactoContainer .secondHalf .item input {
-    border-radius: 4px;
-    border: 1px solid white;
-    outline: 0;
-    padding: 16px;
-    width: 90%;
-}
-
-.full {
-    width: 70%;
-    margin-bottom: 30px;
-}
-
-.full textarea {
-    border-radius: 4px;
-    border: 1px solid white;
-    outline: 0;
-    padding: 12px 16px;
-    width: 95%;
-    height: 200px;
-}
-
-.contactoContainer .botones input {
-    border-radius: 4px;
-    border: 1px solid white;
-    outline: 0;
-    cursor: pointer;
-    font-size: 13px;
-    font-weight: 600;
-    height: 44px;
-    letter-spacing: 3px;
+.fieldTile {
+    width: 80%;
+	border: 0.1px solid #161616f1;
+	outline: none;
+	background-color: white;
+	padding: 1rem 1rem;
+	font-size: 1.1rem;
+	margin-bottom: 22px;
 }
 
 
