--- a/styles.css
+++ b/styles.css
@@ -435,6 +435,7 @@ to {
     top: 10%;
     background: #D9D9D9;
     border-radius: 20px;
+    box-shadow: 0px 0px 3px 0px #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -460,11 +461,20 @@ to {
 .fieldTile {
     width: 80%;
 	border: 0.1px solid #161616f1;
-	outline: none;
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 0px #000000;
+    outline: none;
 	background-color: white;
 	padding: 1rem 1rem;
 	font-size: 1.1rem;
 	margin-bottom: 22px;
+    font-family: Spinnaker;
+}
+
+.botonContacto {
+    width: 10%;
+    padding: 1rem 1rem;
+    box-shadow: 0px 0px 3px 0px #000000;
 }
 
 
