--- a/styles.css
+++ b/styles.css
@@ -513,7 +513,7 @@ input[type=text]:hover, textarea:hover {
     filter: blur(2px);
 }
 
-.textContainer {
+.imageContainer {
     position: absolute;
     width: 80vw;
     height: 70vh;
@@ -523,8 +523,25 @@ input[type=text]:hover, textarea:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #D9D9D9;
-    filter: opacity(70%);
+    background: #161616f1;
+    filter: opacity(200%);
+}
+
+.textContainer {
+    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textContainer p {
+    width: 60%;
+    font-size: 1.5rem;
+}
+
+.textContainer h2 {
+    font-size: 1.7rem;
 }
 
 
