--- a/styles.css
+++ b/styles.css
@@ -544,6 +544,7 @@ input[type=text]:hover, textarea:hover {
     font-size: 1.7rem;
 }
 
+/*---------------------- COTIZACIONES CSS ------------------- */
 
 
 
