Cambios para cotizaciones
se le agrego la funcion para que desaparezca la primera parte y se modifico el estilo de la ultima

--- a/Opcion 2/styles.css
+++ b/Opcion 2/styles.css
@@ -978,11 +978,14 @@ to {
     margin-top: 1.5rem;
 }
 
+.button__container--pago{
+    display: flex;
+    flex-direction: row;
+}
 
-.botonAnterior--2,
-.botonSiguiente--3 {
+.boton--top {
     margin-top: 55%;
-    margin-left: 5.8rem;
+    margin-left: 0rem;
     
 }
 
